@@ -1,1 +1,1 @@
-DIST trickyfetch-7.2.tar.gz 9917 SHA256 13446bc3a53a97ad1604167b684ead7c642f1f8ef3a856a97a5acff161ebfec9 SHA512 1595cbaaa0d6a7920c72f8952037e80bef7650e9a6bf16e1ab17fab89be3786c91172493480a7e11e037aca4509108aeadfb8572a9e9e29a24cd51564d64d50e WHIRLPOOL 2e285e7426f90d7a3c053f2bde6dddf375c0eb7b63e75cc8dd4b79b1773255ff69a47cfc136ea3f302fd2c490a16e8031eeeca538aa1034926344cb6362c29a1
+DIST trickyfetch-7.3.tar.gz 10016 SHA256 6c59697993c874697ec184ac0063d2b93efb3f3706fa1f6226f0874b30f4dc0a SHA512 a73b6df2332e8890c6a20dde864ce93c39b871f5032ad093532e12d8d77069611f84df8c429df45a49d2fe7bb671d486775275f15c4efe2f1d637ff95c869cab WHIRLPOOL da611c51bee8b0c94f2b3c1d7202fa9e9c755334c85ecffa460f863ca5b7e0c41efc4c6647628e3532c1e1b6700de2febfad19964b3a994c77a0ff5e83d9233b
