@@ -15,5 +15,6 @@
 	</upstream>
 	<use>
 		<flag name="eix">Pull in eix for quicker execution</flag>
+		<flag name="getdelta">Support getdelta</flag>
 	</use>
 </pkgmetadata>
