@@ -15,6 +15,7 @@ app-portage/eix:tools - Create separate binary for script helper tools; useful i
 app-portage/logclean:eix - Pull in eix for quicker execution
 app-portage/portage-bashrc-mv:eix - Pull in >=app-portage/eix-0.25.6 for proper mask handling
 app-portage/trickyfetch:eix - Pull in eix for quicker execution
+app-portage/trickyfetch:getdelta - Support getdelta
 app-portage/useflags:eix - Pull in eix for quicker execution
 app-shells/auto-fu-zsh:compile - Byte-compile to speed up
 app-shells/auto-fu-zsh:kill-line - Make Ctrl-D work correctly and in case of nonempty buffer work as kill-line resp. kill-whole-line
