@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*trickyfetch-7.3 (25 Nov 2012)
+
+  25 Nov 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Make getdelta support optional
+
 *trickyfetch-7.2 (11 Nov 2012)
 
   11 Nov 2012; Martin Väth <martin@mvath.de>
